project(SBE-sys)

file(GLOB PROJECT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/common/*.cpp
)

file(GLOB PROJECT_SOURCES_PLATFORM
if(WIN32)
	${CMAKE_CURRENT_SOURCE_DIR}/win32/*.cpp
elseif(UNIX)
	${CMAKE_CURRENT_SOURCE_DIR}/posix/*.cpp
endif()
)

if(SBE_SINGLE_BINARY)
	set(LIB_TYPE STATIC)
else()
	set(LIB_TYPE MODULE)
endif()

add_library(${PROJECT_NAME} ${LIB_TYPE} ${PROJECT_SOURCES} ${PROJECT_SOURCES_PLATFORM})