project(SBE-clientapp)

file(GLOB PROJECT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

if(SBE_USE_SDL)
	file(GLOB PROJECT_SOURCES_PLATFORM
		${CMAKE_CURRENT_SOURCE_DIR}/sdl2/*.cpp
	)
elseif(WIN32)
	file(GLOB PROJECT_SOURCES_PLATFORM
		${CMAKE_CURRENT_SOURCE_DIR}/win/*.cpp
	)
#else()
	#file(GLOB PROJECT_SOURCES_PLATFORM
		#${CMAKE_CURRENT_SOURCE_DIR}/posix/*.cpp
	#)
endif()

list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_PLATFORM})

add_library(${PROJECT_NAME} STATIC ${PROJECT_SOURCES})

if(SBE_USE_SDL)
	target_include_directories(${PROJECT_NAME}
		PRIVATE ${SBE_SDL_PATH}/include
	)
endif()

target_include_directories(${PROJECT_NAME}
	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
)