project(SBE-sound)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB PROJECT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

if(WIN32)
	file(GLOB PROJECT_SOURCES_APISPEC
		${CMAKE_CURRENT_SOURCE_DIR}/xaudio2/*.cpp
	)
elseif(UNIX)
	file(GLOB PROJECT_SOURCES_APISPEC
		${CMAKE_CURRENT_SOURCE_DIR}/openal/*.cpp
	)
else()
	file(GLOB PROJECT_SOURCES_APISPEC
		${CMAKE_CURRENT_SOURCE_DIR}/stub/*.cpp
	)
endif()

list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_APISPEC})

if(SBE_SINGLE_BINARY)
	set(LIB_TYPE STATIC)
else()
	set(LIB_TYPE MODULE)
endif()

add_library(${PROJECT_NAME} ${LIB_TYPE} ${PROJECT_SOURCES})

if(NOT SBE_SINGLE_BINARY)
	set_target_properties(${PROJECT_NAME} PROPERTIES
		OUTPUT_NAME "SbSound"
	)
	
	target_link_libraries(${PROJECT_NAME} SBE-idlib)
endif()