project(SBE-input)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB PROJECT_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

if(WIN32)
	file(GLOB PROJECT_SOURCES_PLATFORM
		${CMAKE_CURRENT_SOURCE_DIR}/win/*.cpp
	)
else()
	file(GLOB PROJECT_SOURCES_PLATFORM
		${CMAKE_CURRENT_SOURCE_DIR}/sdl2/*.cpp
	)
endif()

list(APPEND PROJECT_SOURCES ${PROJECT_SOURCES_PLATFORM})

if(SBE_SINGLE_BINARY)
	set(LIB_TYPE STATIC)
else()
	set(LIB_TYPE MODULE)
endif()

add_library(${PROJECT_NAME} ${LIB_TYPE} ${PROJECT_SOURCES})

if(NOT SBE_SINGLE_BINARY)
	set_target_properties(${PROJECT_NAME} PROPERTIES
		OUTPUT_NAME "SbInput"
	)

	target_link_libraries(${PROJECT_NAME} SBE-idlib)
endif()